 - Support IPv6
 - Save directory of last loaded file
 - Support BPS patches
 - Automatically detect and optimize out idle loops
 - Configurable game overrides
 - Support loading 7-Zip files
 - Drag and drop game loading
 - Cheat code support
 - Debugger: Add CLI functions for examining memory regions
 - Runtime configurable audio driver
Bugfixes:
 - ARM7: Extend prefetch by one stage
 - GBA Audio: Support 16-bit writes to FIFO audio
 - GBA Audio: Audio buffer sizes are now correct sizes for both sample rates
 - GBA BIOS: Fix BIOS prefetch after returning from an IRQ
 - GBA BIOS: Fix BIOS prefetch after reset
 - GBA Memory: Fix alignment of open bus 8- and 16-bit loads
 - GBA Thread: Fix possible hang when loading an archive
 - Perf: Fix crash when the GBA thread fails to start
 - SDL: Properly clean up if a game doesn't launch
 - Debugger: Disassembly now lists PSR bitmasks (fixes #191)
 - GBA BIOS: Prevent CpuSet and CpuFastSet from using BIOS addresses as a source (fixes #184)
 - GBA RR: Fix fallthrough error when reading tags from a movie
 - GBA Thread: Fix possible deadlock in video sync
 - GBA: Fix savestate loading of DISPSTAT and WAITCNT registers
 - Qt: Fix crash starting a GDB stub if a game isn't loaded
 - Qt: Fix crash when adjusting settings after closing a game
 - Qt: Fix crash when starting GDB stub after closing a game
 - Qt: Fix patch loading while a game is running
Misc:
 - GBA Audio: Change internal audio sample buffer from 32-bit to 16-bit samples
 - GBA Memory: Simplify memory API and use fixed bus width
 - GBA Video: Start video at the last scanline instead of the first
 - Debugger: Watchpoints now work on STM/LDM instructions
 - GBA: Improve accuracy of event timing
 - Debugger: Clean up GDB stub network interfacing
 - Debugger: Simplify debugger state machine to play nicer with the GBA thread loop
 - Debugger: Merge Thumb BL instructions when disassembling
 - Debugger: Clean up debugger interface, removing obsolete state (fixes #67)